# Hippo-CLI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  GETTING_STARTED.md  README.md  TROUBLESHOOTING.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
complete_companies_data/csv/: company_details.csv
complete_companies_data/json/: company_details.ndjson  company_details_complete.json
complete_companies_data/json_Map/: ticker_mapping.json
complete_companies_data/sql/: company_details.sql
config/: default.yaml
data/csv/: company_details.csv
data/csv/AAPL/: AAPL_company_details.csv  AAPL_stock_price_insights.csv
data/csv/MSFT/: MSFT_company_details.csv  MSFT_stock_price_insights.csv
data/json/: company_details.json  company_details.ndjson
data/json/AAPL/: AAPL_company_details.json
data/json/MSFT/: MSFT_company_details.json  MSFT_stock_price_insights.json
data/mappings/: ticker_mapping.json  ticker_mapping.schema.json
data/parquet/AAPL/: AAPL_company_details.parquet  AAPL_stock_price_insights.parquet
data/parquet/MSFT/: MSFT_company_details.parquet  (+1 more)
data/sql/: company_details.sql
scripts/: get_Data.sh  hippocli.bat  hippocli.sh  install.sh  json_to_csv.sh  json_to_sql.sh  quick-start.sh
scripts/unitest/: README.md
src/hippocli/: __init__.py  analytics.py  cli.py  config.py  converter.py  fetcher.py  logging_config.py  models.py  validator.py
tests/: test_analytics.py  test_converter.py  test_validation.py
tests/data/: sample_companies.ndjson  sample_mapping.json
(+27 files in other folders)
